[package]
name = "userserversd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "userserversd"
path = "src/userserversd_main.rs"

[[bin]]
name = "userserversctl"
path = "src/userserversctl_main.rs"

[dependencies]
serde_json = "1.0.140"
signal-hook = "0.3.18"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.nix]
version = "0.30.1"
features = ["process", "signal", "user"]
